--- a/django_app/Dockerfile
+++ b/django_app/Dockerfile
@@ -5,6 +5,11 @@ FROM python:3.12.3
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       ffmpeg \
+    && rm -rf /var/lib/apt/lists/*
+
 # 3. Рабочая директория внутри контейнера
 WORKDIR /app
 
