--- a/django_app/requirements.txt
+++ b/django_app/requirements.txt
@@ -24,6 +24,7 @@ openai==1.82.1
 propcache==0.3.1
 pydantic==2.11.5
 pydantic_core==2.33.2
+pydub==0.25.1
 python-dotenv==1.1.0
 sniffio==1.3.1
 sqlparse==0.5.3
